# zelos-extension-can

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  config.json  config.schema.json  demo.py  extension.toml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: CI.yml  release.yml
docs/: sdk-gil-fix-spec.md
scripts/: package_extension.py  test_frame_loss.py
tests/: test_actions.py  test_can_actions_router.py  test_can_codec.py  test_can_codec_actions.py  test_candump_wire.py  test_canopen_handler.py  test_canopen_protocol.py  test_config.py  test_e2e_integration.py  test_export.py  test_extension.py  test_frame_loss.py  test_j1939_handler.py  test_j1939_pgn.py  test_j1939_transport.py  test_monitor.py  test_nan_coercion_regression.py  test_shutdown_recovery.py  test_ssh_codec_integration.py  test_ssh_transport.py  test_zelos_socketcan.py
tests/files/: low_id_collision.dbc  test.dbc  test_j1939.dbc
zelos_extension_can/: __init__.py  _candump.py  actions.py  can_codec.py  cli.py  codec.py  converter.py  extension.py  ssh_socketcan.py
zelos_extension_can/actions/: __init__.py  conversion.py  j1939.py  registry.py  router.py  status.py  transmit.py
zelos_extension_can/cli/: __init__.py  app.py  convert.py  export.py  trace.py  utils.py
zelos_extension_can/demo/: canopen_demo.py  demo.dbc  demo.py  j1939_demo.py
zelos_extension_can/examples/: __init__.py  pcan.py  socketcan.py
zelos_extension_can/protocols/: __init__.py  base.py
zelos_extension_can/protocols/canopen/: __init__.py  eds.py  handler.py  pdo.py  protocol.py  sdo.py
zelos_extension_can/protocols/j1939/: __init__.py  diagnostics.py  handler.py  pgn.py  transport.py
zelos_extension_can/utils/: __init__.py  config.py  file_utils.py  schema_utils.py
