[project]
name = "zelos-extension-can"
version = "0.0.1"
description = "Zelos App extension for CAN"
authors = [{ name = "tkeairns", email = "taylor@zeloscloud.io" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "zelos-sdk>=0.0.6",
    "python-can>=4.4.0",
    "cantools>=39.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pre-commit>=4.3.0",
    "ty>=0.0.1a0",
    "ruff>=0.13.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zelos_extension_can"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--log-cli-level=INFO"

[tool.ty.rules]
unresolved-attribute = "ignore"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]
