[project]
name = "zelos-extension-can"
version = "0.1.12"
description = "CAN extension for Zelos"
authors = [{ name = "zeloscloud", email = "info@zeloscloud.io" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["zelos", "extension"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # Bumped from 0.0.9 to satisfy zelos-can's `zelos-sdk>=0.0.10a5` floor;
    # without this the zelos-can dependency below can't resolve on Linux.
    "zelos-sdk>=0.0.10a5",
    "python-can",
    "cantools",
    "rich-click>=1.8.0",
    "pyarrow>=14.0.0",
    # Rust-backed CAN codec. Registers the 'zelos-socketcan' python-can plugin
    # (Linux) and provides zelos_can.ExternalBus, which drives the cross-platform
    # 'ssh-socketcan' interface. ExternalBus ships in 0.0.7a1 and wheels cover all
    # platforms, so there is no sys_platform marker. Floor (not exact) pin to
    # avoid per-alpha churn.
    "zelos-can[python-can]>=0.0.7a1",
]

[project.scripts]
zelos-extension-can = "main:cli"

[project.urls]
Homepage = "https://github.com/zeloscloud/zelos-extension-can"
Repository = "https://github.com/zeloscloud/zelos-extension-can"
Issues = "https://github.com/zeloscloud/zelos-extension-can/issues"
Documentation = "https://docs.zeloscloud.io/extensions"

[project.optional-dependencies]
cli = [
    "tqdm>=4.0.0",
]
dev = [
    "pytest>=8.4.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.2",
    "jsonschema>=4.0.0",
    "tomli>=2.3.0; python_version < '3.11'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zelos_extension_can"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--log-cli-level=INFO"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "B008",   # function call in defaults (common in decorators)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["PTH123"]  # Allow open() in scripts

[tool.ruff.lint.pydocstyle]
convention = "google"
